Quiclinks nav spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -2177,13 +2177,15 @@ p.small-title {
   position: sticky;
   top: 120px;
 }
-.faq-categories .section-list{
+.faq-categories .section-list,
+.qlinks-nav-wrapper .section-list {
   list-style-type: none;
   margin: 0;
   padding: 0;
   font-size: 18px;
 }
-.faq-categories li {
+.faq-categories li,
+.qlinks-nav-wrapper li {
   max-width: 250px;
   white-space: nowrap;
   overflow: hidden;
@@ -2191,10 +2193,12 @@ p.small-title {
   padding: 4px 0;
   border-bottom: 1px solid #e7e7e7;
 }
-.faq-categories li + li{
-  margin-top: 10px;
+.faq-categories li + li, 
+.qlinks-nav-wrapper li + li{
+  margin-top: 6px;
 }
-.faq-categories .sub-links li:last-child {
+.faq-categories .sub-links li:last-child,
+.qlinks-nav-wrapper .sub-links li:last-child{
   border-bottom: none;
 }
 .page-title {
